--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,10 @@
 language: node_js
 node_js:
   - "node"
-
+install:
+  - npm -g install yarn
+  - yarn
+cache:
+  directories:
+    - ~/.yarn
+    - ~/.nvm
