--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "eslint-plugin-import": "2.0.1",
     "eslint-plugin-promise": "3.0.0",
     "eslint-plugin-react": "6.4.1",
-    "eslint-plugin-react-native": "2.0.0"
+    "eslint-plugin-react-native": "2.0.0",
+    "react": "15.3.2"
   },
   "peerDependencies": {
     "babel-eslint": "7.0.0",
