--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,8 @@
 language: node_js
 node_js:
   - "node"
-before_install:
-  - time npm i -g yarn --cache-min 999999999
-install:
-  - time yarn install --pure-lockfile
 test:
   - yarn check
   - npm run checkPeerDependencies
   - npm test
-cache:
-  directories:
-    - $HOME/.npm
-    - $HOME/.yarn-cache
+cache: yarn
