--- a/package.json
+++ b/package.json
@@ -34,9 +34,11 @@
     "eslint-plugin-eslint-comments": "^1.0.0",
     "eslint-plugin-flowtype": "^2.29.1",
     "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-moment-utc": "^1.0.0",
     "eslint-plugin-promise": "^3.4.0",
     "eslint-plugin-react": "^6.8.0",
     "eslint-plugin-react-native": "^2.2.1",
+    "moment": "^2.17.1",
     "react": "^15.4.1"
   },
   "peerDependencies": {
@@ -46,6 +48,7 @@
     "eslint-plugin-eslint-comments": "^1.0.0",
     "eslint-plugin-flowtype": "^2.29.1",
     "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-moment-utc": "^1.0.0",
     "eslint-plugin-promise": "^3.4.0",
     "eslint-plugin-react": "^6.8.0",
     "eslint-plugin-react-native": "^2.2.1"
