--- a/package.json
+++ b/package.json
@@ -24,33 +24,33 @@
     "react.js"
   ],
   "scripts": {
-    "test": "eslint --ignore-pattern '!.eslintrc.js' .",
+    "test": "eslint --cache --ignore-pattern '!.eslintrc.js' .",
     "checkPeerDependencies": "node ./scripts/checkPeerDependencies.js"
   },
   "devDependencies": {
     "babel-eslint": "^7.1.1",
-    "eslint": "^3.12.1",
-    "eslint-plugin-babel": "^4.0.0",
+    "eslint": "^3.14.1",
+    "eslint-plugin-babel": "^4.0.1",
     "eslint-plugin-eslint-comments": "^1.0.0",
-    "eslint-plugin-flowtype": "^2.29.1",
+    "eslint-plugin-flowtype": "^2.30.0",
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-moment-utc": "^1.0.0",
     "eslint-plugin-promise": "^3.4.0",
-    "eslint-plugin-react": "^6.8.0",
+    "eslint-plugin-react": "^6.9.0",
     "eslint-plugin-react-native": "^2.2.1",
     "moment": "^2.17.1",
-    "react": "^15.4.1"
+    "react": "^15.4.2"
   },
   "peerDependencies": {
     "babel-eslint": "^7.1.1",
-    "eslint": "^3.12.1",
-    "eslint-plugin-babel": "^4.0.0",
+    "eslint": "^3.14.1",
+    "eslint-plugin-babel": "^4.0.1",
     "eslint-plugin-eslint-comments": "^1.0.0",
-    "eslint-plugin-flowtype": "^2.29.1",
+    "eslint-plugin-flowtype": "^2.30.0",
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-moment-utc": "^1.0.0",
     "eslint-plugin-promise": "^3.4.0",
-    "eslint-plugin-react": "^6.8.0",
+    "eslint-plugin-react": "^6.9.0",
     "eslint-plugin-react-native": "^2.2.1"
   }
 }
