--- a/package.json
+++ b/package.json
@@ -34,12 +34,11 @@
     "eslint-plugin-eslint-comments": "^1.0.0",
     "eslint-plugin-flowtype": "^2.30.4",
     "eslint-plugin-import": "^2.2.0",
-    "eslint-plugin-jest": "^19.0.1",
-    "eslint-plugin-jsdoc": "^3.0.0",
     "eslint-plugin-moment-utc": "^1.0.0",
     "eslint-plugin-promise": "^3.5.0",
     "eslint-plugin-react": "^6.10.3",
     "eslint-plugin-react-native": "^2.3.1",
+    "eslint-plugin-jest": "^19.0.1",
     "moment": "^2.18.1",
     "react": "^15.4.2"
   },
@@ -50,11 +49,10 @@
     "eslint-plugin-eslint-comments": "^1.0.0",
     "eslint-plugin-flowtype": "^2.30.4",
     "eslint-plugin-import": "^2.2.0",
-    "eslint-plugin-jest": "^19.0.1",
-    "eslint-plugin-jsdoc": "^3.0.0",
     "eslint-plugin-moment-utc": "^1.0.0",
     "eslint-plugin-promise": "^3.5.0",
     "eslint-plugin-react": "^6.10.3",
-    "eslint-plugin-react-native": "^2.3.1"
+    "eslint-plugin-react-native": "^2.3.1",
+    "eslint-plugin-jest": "^19.0.1"
   }
 }
