--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "devDependencies": {
     "babel-eslint": "^7.2.0",
     "eslint": "^3.19.0",
+    "eslint-config-prettier": "^1.7.0",
     "eslint-plugin-babel": "^4.1.1",
     "eslint-plugin-eslint-comments": "^1.0.0",
     "eslint-plugin-flowtype": "^2.30.4",
@@ -58,6 +59,6 @@
     "eslint-plugin-promise": "^3.5.0",
     "eslint-plugin-react": "^6.10.3",
     "eslint-plugin-react-native": "^2.3.1",
-    "prettier": "^1.2.2",
+    "prettier": "^1.2.2"
   }
 }
