--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
   },
   "devDependencies": {
     "babel-eslint": "^8.0.1",
-    "eslint": "^4.9.0",
+    "eslint": "^4.13.1",
     "eslint-config-prettier": "^2.6.0",
     "eslint-plugin-babel": "^4.1.2",
     "eslint-plugin-eslint-comments": "^1.0.3",
@@ -41,13 +41,14 @@
     "eslint-plugin-promise": "^3.6.0",
     "eslint-plugin-react": "^7.4.0",
     "eslint-plugin-react-native": "^3.1.0",
+    "eslint-plugin-sort-imports-es6-autofix": "^0.1.1",
     "moment": "^2.19.1",
     "prettier": "^1.7.4",
     "react": "^16.0.0"
   },
   "peerDependencies": {
     "babel-eslint": ">=8.0.1",
-    "eslint": ">=4.9.0",
+    "eslint": ">=4.13.1",
     "eslint-config-prettier": ">=2.6.0",
     "eslint-plugin-babel": ">=4.1.2",
     "eslint-plugin-eslint-comments": ">=1.0.3",
@@ -60,6 +61,7 @@
     "eslint-plugin-promise": ">=3.6.0",
     "eslint-plugin-react": ">=7.4.0",
     "eslint-plugin-react-native": ">=3.1.0",
+    "eslint-plugin-sort-imports-es6-autofix": ">=0.1.1",
     "prettier": ">=1.7.4"
   }
 }
