--- a/package.json
+++ b/package.json
@@ -1,67 +1,55 @@
 {
-  "name": "@rnfdigital/eslint-config",
-  "description": "RNF Digital ESLint configuration",
-  "version": "2.4.1",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/RNFDigital/eslint-config.git"
-  },
-  "keywords": [
-    "eslint"
-  ],
-  "author": "",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/RNFDigital/eslint-config/issues"
-  },
-  "homepage": "https://github.com/RNFDigital/eslint-config#readme",
-  "main": "eslint.js",
-  "files": [
-    "eslint.js",
-    "node.js",
-    "react-dom.js",
-    "react-native.js",
-    "react.js"
-  ],
-  "scripts": {
-    "test": "eslint --cache --ignore-pattern '!.eslintrc.js' ."
-  },
-  "devDependencies": {
-    "babel-eslint": "^8.0.3",
-    "eslint": "^4.13.1",
-    "eslint-config-prettier": "^2.9.0",
-    "eslint-plugin-babel": "^4.1.2",
-    "eslint-plugin-eslint-comments": "^2.0.1",
-    "eslint-plugin-flowtype": "^2.40.1",
-    "eslint-plugin-import": "^2.8.0",
-    "eslint-plugin-jest": "^21.5.0",
-    "eslint-plugin-jsdoc": "^3.3.0",
-    "eslint-plugin-moment-utc": "^1.0.0",
-    "eslint-plugin-prettier": "^2.4.0",
-    "eslint-plugin-promise": "^3.6.0",
-    "eslint-plugin-react": "^7.5.1",
-    "eslint-plugin-react-native": "^3.2.0",
-    "eslint-plugin-sort-imports-es6-autofix": "^0.1.1",
-    "moment": "^2.19.1",
-    "prettier": "^1.9.2",
-    "react": "^16.0.0"
-  },
-  "peerDependencies": {
-    "babel-eslint": ">=8.0.3",
-    "eslint": ">=4.13.1",
-    "eslint-config-prettier": ">=2.9.0",
-    "eslint-plugin-babel": ">=4.1.2",
-    "eslint-plugin-eslint-comments": ">=2.0.1",
-    "eslint-plugin-flowtype": ">=2.40.1",
-    "eslint-plugin-import": ">=2.8.0",
-    "eslint-plugin-jest": ">=21.5.0",
-    "eslint-plugin-jsdoc": ">=3.3.0",
-    "eslint-plugin-moment-utc": ">=1.0.0",
-    "eslint-plugin-prettier": ">=2.4.0",
-    "eslint-plugin-promise": ">=3.6.0",
-    "eslint-plugin-react": ">=7.5.1",
-    "eslint-plugin-react-native": ">=3.2.0",
-    "eslint-plugin-sort-imports-es6-autofix": ">=0.1.1",
-    "prettier": ">=1.9.2"
-  }
+    "name": "@rnfdigital/eslint-config",
+    "description": "RNF Digital ESLint configuration",
+    "version": "2.4.1",
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/RNFDigital/eslint-config.git"
+    },
+    "keywords": ["eslint"],
+    "author": "",
+    "license": "MIT",
+    "bugs": {
+        "url": "https://github.com/RNFDigital/eslint-config/issues"
+    },
+    "homepage": "https://github.com/RNFDigital/eslint-config#readme",
+    "main": "eslint.js",
+    "files": ["eslint.js", "node.js", "react-dom.js", "react-native.js", "react.js"],
+    "scripts": {
+        "test": "eslint --cache --ignore-pattern '!.eslintrc.js' ."
+    },
+    "devDependencies": {
+        "babel-eslint": "^8.0.3",
+        "eslint": "^4.13.1",
+        "eslint-config-prettier": "^2.9.0",
+        "eslint-plugin-babel": "^4.1.2",
+        "eslint-plugin-eslint-comments": "^2.0.1",
+        "eslint-plugin-flowtype": "^2.40.1",
+        "eslint-plugin-import": "^2.8.0",
+        "eslint-plugin-jest": "^21.5.0",
+        "eslint-plugin-jsdoc": "^3.3.0",
+        "eslint-plugin-moment-utc": "^1.0.0",
+        "eslint-plugin-promise": "^3.6.0",
+        "eslint-plugin-react": "^7.5.1",
+        "eslint-plugin-react-native": "^3.2.0",
+        "eslint-plugin-sort-imports-es6-autofix": "^0.1.1",
+        "moment": "^2.19.1",
+        "react": "^16.0.0"
+    },
+    "peerDependencies": {
+        "babel-eslint": ">=8.0.3",
+        "eslint": ">=4.13.1",
+        "eslint-config-prettier": ">=2.9.0",
+        "eslint-plugin-babel": ">=4.1.2",
+        "eslint-plugin-eslint-comments": ">=2.0.1",
+        "eslint-plugin-flowtype": ">=2.40.1",
+        "eslint-plugin-import": ">=2.8.0",
+        "eslint-plugin-jest": ">=21.5.0",
+        "eslint-plugin-jsdoc": ">=3.3.0",
+        "eslint-plugin-moment-utc": ">=1.0.0",
+        "eslint-plugin-promise": ">=3.6.0",
+        "eslint-plugin-react": ">=7.5.1",
+        "eslint-plugin-react-native": ">=3.2.0",
+        "eslint-plugin-sort-imports-es6-autofix": ">=0.1.1"
+    }
 }
