--- a/package.json
+++ b/package.json
@@ -59,5 +59,10 @@
     "eslint-plugin-react": ">=7.5.1",
     "eslint-plugin-react-native": ">=3.2.0",
     "eslint-plugin-sort-imports-es6-autofix": ">=0.1.1"
+  },
+  "renovate": {
+    "extends": [
+      "config:base"
+    ]
   }
 }
